# ffrs

./: .gitignore  Cargo.toml  LICENSE  QWEN.md  README.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
.specify/scripts/bash/: check-prerequisites.sh  common.sh  create-new-feature.sh
docs/: USER_MANUAL.md
specs/001-rust-cli-ffmpeg-translation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rust-cli-ffmpeg-translation/checklists/: requirements.md
specs/001-rust-cli-ffmpeg-translation/contracts/: cli-interface.md
specs/002-github-actions-release/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/003-user-manual/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
src/: lib.rs  main.rs
src/command_builder/: builder.rs  mod.rs
src/executor/: mod.rs  runner.rs
src/grammar/: mod.rs  parser.rs  tokenizer.rs
src/intent/: mod.rs  types.rs
src/utils/: file_utils.rs  mod.rs
tests/: deterministic_behavior.rs  quickstart_validation.rs
tests/grammar/: basic_tests.rs
tests/integration/: workflow.rs
tests/snapshots/: command_generation.rs
