[package]
name = "ffrs"
version = "0.1.0"
edition = "2021"
authors = ["Imam Ali Mustofa <darkterminal@duck.com>"]
description = "A CLI tool that translates plain English commands into ffmpeg commands"
license = "MIT"
repository = "https://github.com/darkterminal/ffrs"
homepage = "https://github.com/darkterminal/ffrs"
documentation = "https://docs.rs/ffrs"
readme = "README.md"
keywords = ["cli", "ffmpeg", "media", "conversion", "utility"]
categories = ["command-line-utilities", "multimedia"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
regex = "1.0"
subprocess = "0.2"

[dev-dependencies]
tempfile = "3.0"
